# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/ChangeLog,v 1.45 2008/05/04 14:10:01 kolmodin Exp $

  04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  -files/gtk2hs-0.9.10-cflags.patch, -files/gtk2hs-0.9.10-ghc622.patch,
  -files/gtk2hs-0.9.10-store.patch, gtk2hs-0.9.12.ebuild:
  Remove unused patches, and fix a ebuild.minorsyn.

  04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  gtk2hs-0.9.12.1.ebuild:
  Add Duncan Coutts' fix when using haddock 0.9.
  This should close bug #220185.

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Fix deps for net-libs/xulrunner and www-client/mozilla-firefox

  26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> -gtk2hs-0.9.10-r1.ebuild,
  gtk2hs-0.9.12.1.ebuild:
  Remove old version fixing bug #207435. Also add dev-util/pkgconfig dep,
  fixing bug #206023.

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> gtk2hs-0.9.12.1.ebuild:
  Stable on amd64 wrt bug #205272

  12 Jan 2008; Markus Meier <maekke@gentoo.org> gtk2hs-0.9.12.1.ebuild:
  x86 stable, bug #205357

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Does not work with gtksourceview 2.x. Fixes bug #201210.

*gtk2hs-0.9.12.1 (10 Nov 2007)

  10 Nov 2007; Luis F. Araujo <araujo@gentoo.org> +gtk2hs-0.9.12.1.ebuild:
  Adding new version

  09 Nov 2007; Luis F. Araujo <araujo@gentoo.org> gtk2hs-0.9.12.ebuild:
  Adding missing backslash to fix package registration

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.10-r1.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  29 Oct 2007; Luis F. Araujo <araujo@gentoo.org> gtk2hs-0.9.12.ebuild:
  Fix for recent glib that changes the type of the gtype typedef

  12 Oct 2007; Rémi Cardona <remi@gentoo.org> gtk2hs-0.9.10-r1.ebuild,